# app/model/composition.ts
@@ -1,0 +1,77 @@
+/**
+ * Food Production Common API
+ * Food Production Common API based on Reference Architectural Model Industrie 4.0 (RAMI 4.0)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { Header } from './header';
+
+export const CompositionSchema = {
+      "properties" : {
+          "header" : {
+              "$ref" : "#/components/schemas/Header"
+          },
+          "organicMass" : {
+              "description" : "biomass as a % of soil",
+              "format" : "%",
+              "maximum" : 100,
+              "minimum" : 0,
+              "type" : "number"
+          },
+          "heavyMetals" : {
+              "format" : "ug/kg or ppb",
+              "type" : "number"
+          },
+          "microbialActivity" : {
+              "format" : "mg/kg",
+              "type" : "number"
+          },
+          "granularity" : {
+              "description" : "Percentage of fine grains to weight\nHigher percentage of file grains means the soil is more cohesive (more clay).\nLower % of fine grains mean the soil is more granular\n",
+              "format" : "%",
+              "type" : "number"
+          },
+          "soilType" : {
+              "description" : "Gravel: >2.0mm\nVery coarse: 1.0 - 2.0mm\nCoarse: 0.50 - 1.0mm\nMedium: 0.25 - 0.50mm\nFine: 0.10 - 0.25mm\nVery fine: 0.05 - 0.10mm\n",
+              "enum" : [ "Gravel", "VeryCoarse", "Coarse", "Medium", "Fine", "VeryFine" ],
+              "type" : "string"
+          }
+      },
+      "type" : "object"
+  };
+
+export enum SoilTypeEnum {
+    Gravel = <any> 'Gravel',
+    VeryCoarse = <any> 'Very coarse',
+    Coarse = <any> 'Coarse',
+    Medium = <any> 'Medium',
+    Fine = <any> 'Fine',
+    VeryFine = <any> 'Very fine'
+}
+
+export interface Composition {
+    header?: Header;
+    /**
+    * biomass as a % of soil
+    */
+    organicMass?: number;
+    heavyMetals?: number;
+    microbialActivity?: number;
+    /**
+    * Percentage of fine grains to weight Higher percentage of file grains means the soil is more cohesive (more clay). Lower % of fine grains mean the soil is more granular
+    */
+    granularity?: number;
+    /**
+    * Gravel: >2.0mm Very coarse: 1.0 - 2.0mm Coarse: 0.50 - 1.0mm Medium: 0.25 - 0.50mm Fine: 0.10 - 0.25mm Very fine: 0.05 - 0.10mm
+    */
+    soilType?: SoilTypeEnum;
+
+}
+
+
