# app/model/plant.ts
@@ -1,0 +1,63 @@
+/**
+ * Food Production Common API
+ * Food Production Common API based on Reference Architectural Model Industrie 4.0 (RAMI 4.0)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { Header, HeaderSchema } from './header';
+
+export const PlantSchema = {
+    "type" : "object",
+    "properties" : {
+        "header": HeaderSchema,
+        "weedSpatialOccurrence" : {
+            "type" : "number",
+            "description" : "average distance"
+        },
+        "plantSpatialArrangement" : {
+            "type" : "number",
+            "description" : "average distance"
+        },
+        "outcrossingAndSelfPollination" : {
+            "type" : "string",
+            "enum" : [ "CROSS", "SELF", "BOTH" ]
+        },
+        "cloneSize" : {
+            "type" : "number"
+        },
+        "fruitSet" : {
+            "type" : "number",
+            "description" : "days"
+        }
+    }
+}
+
+export enum OutcrossingAndSelfPollinationEnum {
+    Cross = <any> 'CROSS',
+    Self = <any> 'SELF',
+    Both = <any> 'BOTH'
+}
+
+export interface Plant {
+    header?: Header;
+    /**
+    * average distance
+    */
+    weedSpatialOccurrence?: number;
+    /**
+    * average distance
+    */
+    plantSpatialArrangement?: number;
+    outcrossingAndSelfPollination?: OutcrossingAndSelfPollinationEnum;
+    cloneSize?: number;
+    /**
+    * days
+    */
+    fruitSet?: number;
+}
