# app/model/temperature.ts
@@ -1,0 +1,76 @@
+/**
+ * Food Production Common API
+ * Food Production Common API based on Reference Architectural Model Industrie 4.0 (RAMI 4.0)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { Header, HeaderSchema } from './header';
+
+export const TemperatureSchema = {
+  "properties": {
+    "header": HeaderSchema,
+    "timing": {
+      "format": "date-time",
+      "type": "string"
+    },
+    "dailyAirTemperature": {
+      "type": "number",
+      "description": "maximum air temperature of the day in Celsius"
+    },
+    "duration": {
+      "type": "number"
+    },
+    "minimalAirTemperatureSeason": {
+      "type": "number",
+      "description": "minimum air temperature recorded during the growing season in Celius ."
+    },
+    "maximumAirTemperatureSeason": {
+      "type": "number",
+      "description": "maximum air temperature recorded during the growing season in Celius ."
+    },
+    "averageAirTemperatureSeason": {
+      "type": "number",
+      "description": "average air temperature recorded during the growing season in Celius ."
+    },
+    "growingDegreeDays": {
+      "type": "number",
+      "description": "number of days in the seasons above the growing threshold for the crop."
+    }
+  },
+  "type": "object"
+}
+
+export interface Temperature {
+  header?: Header;
+  timing?: Date;
+  /**
+   * maximum air temperature of the day in Celsius
+   */
+  dailyAirTemperature?: number;
+  duration?: number;
+  /**
+   * minimum air temperature recorded during the growing season in Celius .
+   */
+  minimalAirTemperatureSeason?: number;
+  /**
+   * maximum air temperature recorded during the growing season in Celius .
+   */
+  maximumAirTemperatureSeason?: number;
+  /**
+   * average air temperature recorded during the growing season in Celius .
+   */
+  averageAirTemperatureSeason?: number;
+  /**
+   * number of days in the seasons above the growing threshold for the crop.
+   */
+  growingDegreeDays?: number;
+
+
+}
+
