# nodejs/api/openapi.yaml
@@ -1,6 +1,7 @@
 openapi: 3.0.3
 info:
-  description: Food Production Common API based on Reference Architectural Model Industrie
+  description: |
+    Food Production Common API based on Reference Architectural Model Industrie
     4.0 (RAMI 4.0)
   title: Food Production Common API
   version: 1.0.0
@@ -8,18 +9,28 @@ servers:
 - url: http://localhost:8000/
 paths:
   /soil/nutrients:
+    get:
+      responses:
+        '200':
+          description: 'Get Updated Nutrient Information'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Nutrient'
+
     post:
-      description: "Raw sensor payment received in the integration layer and converted\
-        \ into \nthis common model to generate an event for the information layer.\n"
-      operationId: soilNutrientsPOST
+      summary: Soil nutrient measurement event
+      description: |
+          Raw sensor payment received in the integration layer and converted into 
+          this common model to generate an event for the information layer.
       requestBody:
         content:
           application/json:
+            schema:
+              $ref: '#/components/schemas/Nutrient'
             examples:
               NutrientExample:
                 $ref: '#/components/examples/NutrientExample'
-            schema:
-              $ref: '#/components/schemas/Nutrient'
           application/xml:
             schema:
               $ref: '#/components/schemas/Nutrient'
@@ -27,15 +38,15 @@ paths:
             schema:
               $ref: '#/components/schemas/Nutrient'
       responses:
-        "201":
+        '201':
           description: Event successfully sent
-      summary: Soil nutrient measurement event
       x-eov-operation-handler: controllers/DefaultController
   /soil/conditions:
     post:
-      description: "Raw sensor payment received in the integration layer and converted\
-        \ into \nthis common model to generate an event for the information layer.\n"
-      operationId: soilConditionsPOST
+      summary: Soil conditions measurement event
+      description: |
+        Raw sensor payment received in the integration layer and converted into 
+        this common model to generate an event for the information layer.
       requestBody:
         content:
           application/json:
@@ -48,15 +59,15 @@ paths:
             schema:
               $ref: '#/components/schemas/Condition'
       responses:
-        "201":
+        '201':
           description: Event successfully sent
-      summary: Soil conditions measurement event
       x-eov-operation-handler: controllers/DefaultController
   /soil/compositions:
     post:
-      description: "Raw sensor payment received in the integration layer and converted\
-        \ into \nthis common model to generate an event for the information layer.\n"
-      operationId: soilCompositionsPOST
+      summary: Soil composition measurement event
+      description: |
+        Raw sensor payment received in the integration layer and converted into 
+        this common model to generate an event for the information layer.
       requestBody:
         content:
           application/json:
@@ -69,15 +80,15 @@ paths:
             schema:
               $ref: '#/components/schemas/Composition'
       responses:
-        "201":
+        '201':
           description: Event successfully sent
-      summary: Soil composition measurement event
       x-eov-operation-handler: controllers/DefaultController
   /weather/temperature:
     post:
-      description: "Raw sensor payment received in the integration layer and converted\
-        \ into \nthis common model to generate an event for the information layer.\n"
-      operationId: weatherTemperaturePOST
+      summary: Soil composition measurement event
+      description: |
+        Raw sensor payment received in the integration layer and converted into 
+        this common model to generate an event for the information layer.
       requestBody:
         content:
           application/json:
@@ -90,15 +101,15 @@ paths:
             schema:
               $ref: '#/components/schemas/Temperature'
       responses:
-        "201":
+        '201':
           description: Event successfully sent
-      summary: Soil composition measurement event
       x-eov-operation-handler: controllers/DefaultController
   /weather/precipitation:
     post:
-      description: "Raw sensor payment received in the integration layer and converted\
-        \ into \nthis common model to generate an event for the information layer.\n"
-      operationId: weatherPrecipitationPOST
+      summary: Soil composition measurement event
+      description: |
+        Raw sensor payment received in the integration layer and converted into 
+        this common model to generate an event for the information layer.
       requestBody:
         content:
           application/json:
@@ -113,25 +124,8 @@ paths:
       responses:
         "201":
           description: Event successfully sent
-      summary: Soil composition measurement event
       x-eov-operation-handler: controllers/DefaultController
 components:
-  examples:
-    NutrientExample:
-      value:
-        header:
-          sensorId: 3fa85f64-5717-4562-b3fc-2c963f66afa6
-          time: 2024-03-27T17:33:31.482Z
-          fieldId: 3fa85f64-5717-4562-b3fc-2c963f66afa6
-        phosphorus: 5
-        nitrogen: 12
-        potassium: 8
-        calcium: 8
-        magnesium: 5
-        sulfur: 1
-        salt: 12
-        zinc: 2
-        iron: 4
   schemas:
     Header:
       example:
@@ -196,12 +190,20 @@ components:
             The most common units of EC are deciSiemens per meter (dS/m)
           format: dS/m
           type: number
+        cationExchangeCapacity:
+          type: number
+          description: |
+            moving ions in the soil based on how much salt and how much water is in the soil.
         zinc:
           format: ppm
           type: number
         iron:
           format: ppm
           type: number
+        nutrientDeficiency:
+          type: array
+          items:
+            type: string
       type: object
     Composition:
       example:
@@ -284,6 +286,11 @@ components:
         temperature:
           format: °C
           type: number
+        soilTemperature:
+          type: number
+          description: °C
+        waterDeficiency:
+          type: number
       type: object
     Temperature:
       example:
@@ -301,10 +308,23 @@ components:
         timing:
           format: date-time
           type: string
-        level:
+        dailyAirTemperature:
           type: number
+          description: maximum air temperature of the day in Celsius
         duration:
           type: number
+        minimalAirTemperatureSeason:
+          type: number
+          description: minimum air temperature recorded during the growing season in Celius .
+        maximumAirTemperatureSeason:
+          type: number
+          description: maximum air temperature recorded during the growing season in Celius .
+        averageAirTemperatureSeason:
+          type: number
+          description: average air temperature recorded during the growing season in Celius .
+        growingDegreeDays:
+          type: number
+          description: number of days in the seasons above the growing threshold for the crop.
       type: object
     Precipitation:
       example:
@@ -320,6 +340,7 @@ components:
         distribution: distribution
         variability: variability
         evaporation: 1.4658129805029452
+      type: object
       properties:
         header:
           $ref: '#/components/schemas/Header'
@@ -332,10 +353,83 @@ components:
           type: number
         distribution:
           type: string
-        evaporation:
+        evapotranspiration:
           type: number
         intensity:
           type: string
         variability:
           type: string
+        daysSinceLastPrecepitation:
+          type: number
+        totalRainyDaysInSeason:
+          type: number
+        averageRainyDaysInSeason:
+          type: number
+        averagePotentialEvapotranspiration:
+          type: number
+        averageVaporPresureDeficit:
+          type: number
+    Plant:
       type: object
+      properties:
+        header:
+          $ref: '#/components/schemas/Header'
+        weedSpatialOccurance:
+          type: number
+          description: average distance
+        plantSpatialArrangement:
+          type: number
+          description: average distance
+        outcrossingAndSelfPollination:
+          type: string
+          enum: [ CROSS, SELF, BOTH ]
+        cloneSize:
+          type: number
+        fruitSet:
+          type: number
+          description: days
+    Animal:
+      type: object
+      properties:
+        header:
+          $ref: '#/components/schemas/Header'
+        beeComposition:
+          type: array
+          items:
+            type: object
+            properties:
+              beeType:
+                type: string
+              beeTypePercentage:
+                type: number
+        beeDensity:
+          type: number
+        beneficialInsectComposition:
+          type: number
+        harmfulInsectComposition:
+          type: number
+        diseasePrevalence:
+          type: number
+        microbialActivity:
+          type: number
+          description: mg/kg
+  examples:
+    NutrientExample:
+      value: {
+        "header": {
+          "sensorId": "3fa85f64-5717-4562-b3fc-2c963f66afa6",
+          "time": "2024-03-27T17:33:31.482Z",
+          "fieldId": "3fa85f64-5717-4562-b3fc-2c963f66afa6"
+        },
+        "phosphorus": 5,
+        "nitrogen": 12,
+        "potassium": 8,
+        "calcium": 8,
+        "magnesium": 5,
+        "sulfur": 1,
+        "salt": 12,
+        "zinc": 2,
+        "iron": 4
+      }
+
+
